RESOLVED FIXED 290987
GPUP: Frequent StrokeLine* blocks on connection semaphore signal
https://bugs.webkit.org/show_bug.cgi?id=290987
Summary GPUP: Frequent StrokeLine* blocks on connection semaphore signal
Kimmo Kinnunen
Reported 2025-04-03 04:27:48 PDT
GPUP: Frequent StrokeLine* blocks on connection semaphore signal
Attachments
Radar WebKit Bug Importer
Comment 1 2025-04-03 04:28:01 PDT
Kimmo Kinnunen
Comment 2 2025-04-03 04:29:50 PDT
EWS
Comment 3 2025-04-14 11:48:28 PDT
Committed 293675@main (3133ed04433d): <https://commits.webkit.org/293675@main> Reviewed commits have been landed. Closing PR #43532 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.