GPUP: Frequent StrokeLine* blocks on connection semaphore signal https://bugs.webkit.org/show_bug.cgi?id=290987 rdar://148507347

Reviewed by Simon Fraser.

Batched items are relatively simple to send and process, and currently
there are not too many types of them. Increase the limit to 100 items
before flushing.

Fixes cases where frequent line drawing slows WebContent process down
due to the semaphore signal.

* Source/WebKit/Platform/IPC/StreamClientConnection.h:

Canonical link: https://commits.webkit.org/293675@main